--- a/_data/attacks/balle_et_al_reconstructing_training_data_with_informed_adversaries.yaml
+++ b/_data/attacks/balle_et_al_reconstructing_training_data_with_informed_adversaries.yaml
@@ -11,8 +11,9 @@ Short Description: Studies how given access to a machine learning model an adver
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2022
