--- a/_data/attacks/chen_et_al_ganleaks_a_taxonomy_of_membership_inference_attacks_against_generative_models.yaml
+++ b/_data/attacks/chen_et_al_ganleaks_a_taxonomy_of_membership_inference_attacks_against_generative_models.yaml
@@ -12,8 +12,9 @@ Short Description: Presents a taxonomy of membership inference attacks, encompas
 Data Type: Image
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2020
