--- a/_data/attacks/cretu_et_al_querysnout_automating_the_discovery_of_attribute_inference_attacks_against_querybased_systems.yaml
+++ b/_data/attacks/cretu_et_al_querysnout_automating_the_discovery_of_attribute_inference_attacks_against_querybased_systems.yaml
@@ -13,8 +13,9 @@ Short Description: A method to automatically discover attacks against interactiv
 Data Type: Tabular
 Type of Release: Linear-Queries
 Threat Model --- Attacker Objective: Attribute-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Ana-Maria Cretu, EPFL
+Publication Year: 2022
