--- a/_data/attacks/dinur_et_al_revealing_information_while_preserving_privacy.yaml
+++ b/_data/attacks/dinur_et_al_revealing_information_while_preserving_privacy.yaml
@@ -14,8 +14,9 @@ Short Description: Seminal paper on the theory of data reconstruction attacks.
 Data Type: Tabular
 Type of Release: Linear-Queries
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Jon Ullman, Northeastern University
+Publication Year: 2003
