--- a/_data/attacks/dwork_et_al_exposed_a_survey_of_attacks_on_private_data.yaml
+++ b/_data/attacks/dwork_et_al_exposed_a_survey_of_attacks_on_private_data.yaml
@@ -8,10 +8,11 @@ Authors: Dwork, C., Smith, A., Steinke, T. and Ullman, J.
 Title: Exposed! a survey of attacks on private data.
 Short Description: Survey of privacy attacks
 Data Type: Tabular
-Type of Release: 
-Threat Model --- Attacker Objective: 
-Threat Model --- Attacker Capabilities: 
+Type of Release: .nan
+Threat Model --- Attacker Objective: .nan
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): James Honaker, Anonym
+Publication Year: 2017
