--- a/_data/attacks/gupin_et_al_synthetic_is_all_you_need_removing_the_auxiliary_data_assumption_for_membership_inference_attacks_against_synthetic_data.yaml
+++ b/_data/attacks/gupin_et_al_synthetic_is_all_you_need_removing_the_auxiliary_data_assumption_for_membership_inference_attacks_against_synthetic_data.yaml
@@ -14,8 +14,9 @@ Short Description: 'Develops new MIAs performed using only the synthetic data in
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2023
