--- a/_data/attacks/houssiau_et_al_tapas_toolbox_for_adversarial_privacy_auditing_ofsynthetic_data.yaml
+++ b/_data/attacks/houssiau_et_al_tapas_toolbox_for_adversarial_privacy_auditing_ofsynthetic_data.yaml
@@ -13,10 +13,11 @@ Title: 'Tapas: Toolbox for Adversarial Privacy Auditing of
 Short Description: A system of classification of MIA attacks presented as part of
   a toolbox of attacks to evaluate synthetic data privacy under a wide range of scenarios
 Data Type: Tabular
-Type of Release: 
-Threat Model --- Attacker Objective: 
-Threat Model --- Attacker Capabilities: 
-Research Type: 
-Links to Artifacts: 
-Comments: 
+Type of Release: .nan
+Threat Model --- Attacker Objective: .nan
+Threat Model --- Attacker Capabilities: .nan
+Research Type: .nan
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Daniil Filienko, University of Washington
+Publication Year: 2022
