--- a/_data/attacks/jagielski_et_al_auditing_differentially_private_machine_learninghow_private_is_private_sgd.yaml
+++ b/_data/attacks/jagielski_et_al_auditing_differentially_private_machine_learninghow_private_is_private_sgd.yaml
@@ -12,8 +12,8 @@ Short Description: Connects the success rate of a membership inferency adversary
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Tudor Cebere, Inria
