--- a/_data/attacks/kariyappa_et_al_cocktail_party_attack_breaking_aggregationbased_privacy_in_federated_learning_using_independent_component_analysis.yaml
+++ b/_data/attacks/kariyappa_et_al_cocktail_party_attack_breaking_aggregationbased_privacy_in_federated_learning_using_independent_component_analysis.yaml
@@ -14,8 +14,9 @@ Short Description: Theoretical attempts to present (and attack) secure aggregati
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Dmitrii Usynin, TUM/Imperial College London
+Publication Year: 2023
