--- a/_data/attacks/mrini_et_al_privacy_attacks_in_decentralized_learning.yaml
+++ b/_data/attacks/mrini_et_al_privacy_attacks_in_decentralized_learning.yaml
@@ -15,8 +15,9 @@ Short Description: The paper designs data reconstruction attacks against Decentr
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/AbdellahElmrini/decAttack
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Aurélien Bellet, Inria
+Publication Year: 2024
