--- a/_data/attacks/papernot_et_al_sok_security_and_privacy_in_machine_learning.yaml
+++ b/_data/attacks/papernot_et_al_sok_security_and_privacy_in_machine_learning.yaml
@@ -7,11 +7,12 @@ BibTex (Please add a bibtex entry for this paper to facilitate easy citations): 
 Authors: Nicolas Papernot, Patrick McDaniel, Arunesh Sinha, Michael P. Wellman
 Title: 'SoK: Security and Privacy in Machine Learning'
 Short Description: Systematization of Knowledge of attacks on privacy of ML
-Data Type: 
-Type of Release: 
-Threat Model --- Attacker Objective: 
-Threat Model --- Attacker Capabilities: 
+Data Type: .nan
+Type of Release: .nan
+Threat Model --- Attacker Objective: .nan
+Threat Model --- Attacker Capabilities: .nan
 Research Type: survey
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Ilya Mironov, Meta
+Publication Year: 2018
