--- a/_data/attacks/salem_et_al_sok_let_the_privacy_games_begin_a_unified_treatment_of_data_inference_privacy_in_machine_learning.yaml
+++ b/_data/attacks/salem_et_al_sok_let_the_privacy_games_begin_a_unified_treatment_of_data_inference_privacy_in_machine_learning.yaml
@@ -31,11 +31,12 @@ Title: 'SoK: Let the Privacy Games Begin! A Unified Treatment of Data Inference 
   in Machine Learning'
 Short Description: Systematization of Knowledge of data inference attacks using a
   privacy-game framework.
-Data Type: 
-Type of Release: 
-Threat Model --- Attacker Objective: 
-Threat Model --- Attacker Capabilities: 
+Data Type: .nan
+Type of Release: .nan
+Threat Model --- Attacker Objective: .nan
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Ilya Mironov, Meta
+Publication Year: 2023
