--- a/_data/attacks/salem_et_al_updatesleak_data_set_inference_and_reconstruction_attacks_in_online_learning.yaml
+++ b/_data/attacks/salem_et_al_updatesleak_data_set_inference_and_reconstruction_attacks_in_online_learning.yaml
@@ -14,8 +14,9 @@ Short Description: Investigate whether the change in the output of a black-box M
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2020
