--- a/_data/attacks/shokri_et_al_shokri_r_stronati_m_song_c_and_shmatikov.yaml
+++ b/_data/attacks/shokri_et_al_shokri_r_stronati_m_song_c_and_shmatikov.yaml
@@ -7,11 +7,12 @@ BibTex (Please add a bibtex entry for this paper to facilitate easy citations): 
 Authors: Shokri, R., Stronati, M., Song, C. and Shmatikov
 Title: Shokri, R., Stronati, M., Song, C. and Shmatikov
 Short Description: The original membership inference based on shadow models
-Data Type: 
-Type of Release: 
+Data Type: .nan
+Type of Release: .nan
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): James Honaker, Anonym
+Publication Year: 2017
