--- a/_data/attacks/tramer_et_al_debugging_differential_privacy_a_case_study_for_privacy_auditing.yaml
+++ b/_data/attacks/tramer_et_al_debugging_differential_privacy_a_case_study_for_privacy_auditing.yaml
@@ -13,8 +13,9 @@ Short Description: Inspired by recent advances in auditing which have been used 
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Information Leakage
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2022
