--- a/_data/attacks/wang_et_al_curator_attack_when_blackbox_differential_privacy_auditing_loses_its_power.yaml
+++ b/_data/attacks/wang_et_al_curator_attack_when_blackbox_differential_privacy_auditing_loses_its_power.yaml
@@ -15,8 +15,9 @@ Short Description: This identifies a critical flaw in blackbox differential priv
 Data Type: Tabular
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Information Leakage
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/ShimingWang98/Curator-Attack-When-Blackbox-DP-Auditing-Loses-Its-Power
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Yash Maurya, Independent Researcher
+Publication Year: 2024
