--- a/_data/attacks/yeom_et_al_privacy_risk_in_machine_learning_analyzing_the_connection_to_overfitting.yaml
+++ b/_data/attacks/yeom_et_al_privacy_risk_in_machine_learning_analyzing_the_connection_to_overfitting.yaml
@@ -12,8 +12,9 @@ Short Description: MIA attack based on final loss for LLMs
 Data Type: Text
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Daniil Filienko, University of Washington
+Publication Year: 2018
