--- a/_data/attacks/annamalai_et_al_a_linear_reconstruction_approach_for_attribute_inference_attacks_against_synthetic_data.yaml
+++ b/_data/attacks/annamalai_et_al_a_linear_reconstruction_approach_for_attribute_inference_attacks_against_synthetic_data.yaml
@@ -12,8 +12,9 @@ Short Description: Introduces a new attribute inference attack against synthetic
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Attribute inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/synthetic-society/recon-synth
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2024
