--- a/_data/attacks/annamalai_et_al_what_do_you_want_from_theory_alone_experimenting_with_tight_auditing_of_differentially_private_synthetic_data_generation.yaml
+++ b/_data/attacks/annamalai_et_al_what_do_you_want_from_theory_alone_experimenting_with_tight_auditing_of_differentially_private_synthetic_data_generation.yaml
@@ -15,8 +15,9 @@ Short Description: Introduces a systemic auditing framework for differentialy pr
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/spalabucr/synth-audit
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Yash Maurya, Independent Researcher
+Publication Year: 2024
