--- a/_data/attacks/betram_et_al_scalable_membership_inference_attacks_via_quantile_regression.yaml
+++ b/_data/attacks/betram_et_al_scalable_membership_inference_attacks_via_quantile_regression.yaml
@@ -12,8 +12,9 @@ Short Description: Membership inference attack that does not require shadow mode
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Johan Östman, AI Sweden
+Publication Year: 2024
