--- a/_data/attacks/boenisch_et_al_when_the_curious_abandon_honesty_federated_learning_is_not_private.yaml
+++ b/_data/attacks/boenisch_et_al_when_the_curious_abandon_honesty_federated_learning_is_not_private.yaml
@@ -12,8 +12,9 @@ Short Description: Malicious FL input reconstruction using trap weights (model m
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: 'https://github.com/JonasGeiping/breaching '
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Dmitrii Usynin, TUM/Imperial College London
+Publication Year: 2023
