--- a/_data/attacks/breugel_et_al_membership_inference_attacks_against_synthetic_data_through_overfitting_detection.yaml
+++ b/_data/attacks/breugel_et_al_membership_inference_attacks_against_synthetic_data_through_overfitting_detection.yaml
@@ -11,8 +11,9 @@ Short Description: Proposes DOMIAS, a density-based MIA model that aims to infer
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2023
