--- a/_data/attacks/carlini_et_al_extracting_training_data_from_diffusion_models.yaml
+++ b/_data/attacks/carlini_et_al_extracting_training_data_from_diffusion_models.yaml
@@ -14,8 +14,9 @@ Short Description: Show that diffusion models memorize individual images from th
 Data Type: Image
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Data-Extraction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2023
