--- a/_data/attacks/carlini_et_al_the_secret_sharer_evaluating_and_testing_unintended_memorization_in_neural_networks.yaml
+++ b/_data/attacks/carlini_et_al_the_secret_sharer_evaluating_and_testing_unintended_memorization_in_neural_networks.yaml
@@ -13,8 +13,9 @@ Short Description: Describes a testing methodology for quantitatively assessing 
 Data Type: Text
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Data-Extraction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2019
