--- a/_data/attacks/carlini_membership_inference_attacks_from_first_principles.yaml
+++ b/_data/attacks/carlini_membership_inference_attacks_from_first_principles.yaml
@@ -10,8 +10,9 @@ Short Description: Takes a step back + new attack (LIRA)
 Data Type: Tabular
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Yves-Alexandre de Montjoye, Imperial College
+Publication Year: 2022
