--- a/_data/attacks/carlini_the_privacy_onion_effect_memorization_is_relative.yaml
+++ b/_data/attacks/carlini_the_privacy_onion_effect_memorization_is_relative.yaml
@@ -10,8 +10,9 @@ Short Description: Removing vulnerable records makes other records vulnerable
 Data Type: Tabular
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Yves-Alexandre de Montjoye, Imperial College
+Publication Year: 2022
