--- a/_data/attacks/choquettechoo_et_al_labelonly_membership_inference_attacks.yaml
+++ b/_data/attacks/choquettechoo_et_al_labelonly_membership_inference_attacks.yaml
@@ -12,8 +12,9 @@ Short Description: Black-box membership inference attacl with label-only access.
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Johan Östman, AI Sweden
+Publication Year: 2021
