--- a/_data/attacks/cohen_et_al_linear_program_reconstruction_in_practice.yaml
+++ b/_data/attacks/cohen_et_al_linear_program_reconstruction_in_practice.yaml
@@ -9,8 +9,9 @@ Short Description: Implemented linear reconstruction attacks against a productio
 Data Type: Tabular
 Type of Release: Linear-Queries
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Applications
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Jon Ullman, Northeastern University
+Publication Year: 2018
