--- a/_data/attacks/duan_et_al_do_membership_inference_attacks_work_on_large_language_models.yaml
+++ b/_data/attacks/duan_et_al_do_membership_inference_attacks_work_on_large_language_models.yaml
@@ -19,8 +19,9 @@ Short Description: Examining MIA attacks on LLM, proposing a github repo with se
 Data Type: Text
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/iamgroot42/mimir
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Daniil Filienko, University of Washington
+Publication Year: 2024
