--- a/_data/attacks/fowl_et_al_decepticons_corrupted_transformers_breach_privacy_in_federated_learning_for_language_models.yaml
+++ b/_data/attacks/fowl_et_al_decepticons_corrupted_transformers_breach_privacy_in_federated_learning_for_language_models.yaml
@@ -13,8 +13,9 @@ Short Description: Model inversion attacks using a malicious attacker in transfo
 Data Type: Text
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: 'https://github.com/JonasGeiping/breaching '
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Dmitrii Usynin, TUM/Imperial College London
+Publication Year: 2022
