--- a/_data/attacks/fowl_et_al_robbing_the_fed_directly_obtaining_private_data_in_federated_learning_with_modified_models.yaml
+++ b/_data/attacks/fowl_et_al_robbing_the_fed_directly_obtaining_private_data_in_federated_learning_with_modified_models.yaml
@@ -12,8 +12,9 @@ Short Description: Malicious adversary to perform exact reconstruction of the tr
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: 'https://github.com/JonasGeiping/breaching '
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Dmitrii Usynin, TUM/Imperial College London
+Publication Year: 2021
