--- a/_data/attacks/ganev_et_al_on_the_inadequacy_of_similaritybased_privacy_metrics_reconstruction_attacks_against_truly_anonymous_synthetic_data.yaml
+++ b/_data/attacks/ganev_et_al_on_the_inadequacy_of_similaritybased_privacy_metrics_reconstruction_attacks_against_truly_anonymous_synthetic_data.yaml
@@ -15,8 +15,9 @@ Short Description: Reviews the privacy metrics offered by leading companies in t
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2023
