--- a/_data/attacks/giomi_et_al_a_unified_framework_for_quantifying_privacy_risk_in_synthetic_data.yaml
+++ b/_data/attacks/giomi_et_al_a_unified_framework_for_quantifying_privacy_risk_in_synthetic_data.yaml
@@ -12,8 +12,9 @@ Short Description: Present Anonymeter, a statistical framework to jointly quanti
 Data Type: Tabular
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2023
