--- a/_data/attacks/hayes_et_al_logan_membership_inference_attacks_against_generative_models.yaml
+++ b/_data/attacks/hayes_et_al_logan_membership_inference_attacks_against_generative_models.yaml
@@ -11,8 +11,9 @@ Short Description: 'Presents the first membership inference attacks against gene
 Data Type: Image
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2019
