--- a/_data/attacks/hilprecht_et_al_monte_carlo_and_reconstruction_membership_inference_attacks_against_generative_models.yaml
+++ b/_data/attacks/hilprecht_et_al_monte_carlo_and_reconstruction_membership_inference_attacks_against_generative_models.yaml
@@ -11,8 +11,9 @@ Short Description: Present two information leakage attacks that outperform previ
 Data Type: Image
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2019
