--- a/_data/attacks/mattern_membership_inference_attacks_against_language_models_via_neighbourhood_comparison.yaml
+++ b/_data/attacks/mattern_membership_inference_attacks_against_language_models_via_neighbourhood_comparison.yaml
@@ -11,8 +11,9 @@ Short Description: Memership inference attack agaisnt LLMs by generating neighbo
 Data Type: Text
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Applications
 Links to Artifacts: https://github.com/mireshghallah/neighborhood-curvature-mia
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Hamid Mozaffari, Oracle Labs
+Publication Year: 2023
