--- a/_data/attacks/mireshghallah_et_al_quantifying_privacy_risks_of_masked_language_models_using_membership_inference_attacks.yaml
+++ b/_data/attacks/mireshghallah_et_al_quantifying_privacy_risks_of_masked_language_models_using_membership_inference_attacks.yaml
@@ -16,8 +16,9 @@ Short Description: Membership inference attack based on likelihood ratio hypothe
 Data Type: Text
 Type of Release: Generative-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Applications
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Daniil Filienko, University of Washington
+Publication Year: 2022
