--- a/_data/attacks/nasr_et_al_adversary_instantiation_lower_bounds_for_differentially_private_machine_learning.yaml
+++ b/_data/attacks/nasr_et_al_adversary_instantiation_lower_bounds_for_differentially_private_machine_learning.yaml
@@ -21,8 +21,9 @@ Short Description: Instantiates a hypothetical adversary in order to establish l
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Georgi Ganev, UCL
+Publication Year: 2021
