--- a/_data/attacks/rezaei_et_al_on_the_difficulty_of_membership_inference_attacks.yaml
+++ b/_data/attacks/rezaei_et_al_on_the_difficulty_of_membership_inference_attacks.yaml
@@ -10,8 +10,9 @@ Short Description: Critique of prior MIAs for their poor false positive rate.
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/shrezaei/MI-Attack
-Comments: 
-Submitter (your name, affiliation): 
+Comments: .nan
+Submitter (your name, affiliation): .nan
+Publication Year: 2021
