--- a/_data/attacks/stevanoski_et_al_querycheetah_fast_automated_discovery_of_attribute_inference_attacks_against_querybased_systems.yaml
+++ b/_data/attacks/stevanoski_et_al_querycheetah_fast_automated_discovery_of_attribute_inference_attacks_against_querybased_systems.yaml
@@ -13,8 +13,9 @@ Short Description: A method for fast automated discovery of attacks against quer
 Data Type: Tabular
 Type of Release: Linear-Queries
 Threat Model --- Attacker Objective: Attribute inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: https://github.com/computationalprivacy/querycheetah
 Comments: Distinguished Paper Award at ACM CCS 2024
 Submitter (your name, affiliation): Bozhidar Stevanoski, Imperial College London
+Publication Year: 2024
