--- a/_data/attacks/truex_et_al_demystifying_membership_inference_attacks_in_machine_learning_as_a_service.yaml
+++ b/_data/attacks/truex_et_al_demystifying_membership_inference_attacks_in_machine_learning_as_a_service.yaml
@@ -12,8 +12,9 @@ Short Description: (1) MIA in the style of Shokri et al.'17 with shadow models w
 Data Type: Image, tabular
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Membership-Inference
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): Ilya Mironov, Meta
+Publication Year: 2021
