--- a/_data/attacks/wagner_et_al_technical_privacy_metrics_a_systematic_survey.yaml
+++ b/_data/attacks/wagner_et_al_technical_privacy_metrics_a_systematic_survey.yaml
@@ -1,13 +1,13 @@
 URL: https://arxiv.org/abs/1512.00327
-BibTex (Please add a bibtex entry for this paper to facilitate easy citations): 
+BibTex (Please add a bibtex entry for this paper to facilitate easy citations): .nan
 Authors: Wagner, I. and Eckhoff, D.
 Title: 'Technical privacy metrics: a systematic survey.'
 Short Description: Survey of privacy-loss metrics
 Data Type: Tabular
 Type of Release: Linear-Queries
 Threat Model --- Attacker Objective: Information Leakage
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Theoretical
-Links to Artifacts: 
-Comments: 
+Links to Artifacts: .nan
+Comments: .nan
 Submitter (your name, affiliation): James Honaker, Anonym
