--- a/_data/attacks/yin_et_al_see_through_gradients_image_batch_recovery_via_gradinversion.yaml
+++ b/_data/attacks/yin_et_al_see_through_gradients_image_batch_recovery_via_gradinversion.yaml
@@ -11,8 +11,9 @@ Short Description: First demonstration of large batch-size model inversion in FL
 Data Type: Image
 Type of Release: Predictive-Model
 Threat Model --- Attacker Objective: Reconstruction
-Threat Model --- Attacker Capabilities: 
+Threat Model --- Attacker Capabilities: .nan
 Research Type: Empirical
 Links to Artifacts: 'https://github.com/JonasGeiping/breaching '
-Comments: 
+Comments: .nan
 Submitter (your name, affiliation): Dmitrii Usynin, TUM/Imperial College London
+Publication Year: 2021
