stylish how to use

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Differential Privacy Deployments Registry
+title: Privacy Attacks Repository
 email: info@opendp.org
 description: >-
   This resource aims to document existing attacks on output privacy.
